--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <div *ngIf="lc.loginCheck">
+<div *ngIf="lc.loginCheck">
   <navbar></navbar>
-</div> -->
+</div>
 
 <div *ngIf="!lc.loginCheck">
     <login-signup></login-signup>
