--- a/src/app/home/login-signup/login-signup.component.html
+++ b/src/app/home/login-signup/login-signup.component.html
@@ -1,4 +1,19 @@
 <div *ngIf="!lc.loginCheck">
+<div class="navigation-bar">
+        <div id="navigation-container">
+            <img class="logo" src="assets/img/bank1.png" alt="BANK">
+            <ul>
+                <li><a routerLink="login">Login</a></li>
+                <li><a routerLink="register">Register</a></li>
+            </ul>
+        </div>
+</div>
+</div>
+
+<!-- <router-outlet></router-outlet> -->
+<!-- <home></home> -->
+
+<!-- <div *ngIf="!lc.loginCheck">
 <h2>Login or Signup First!</h2>
 <hr>
 <div class="centerLogin">
@@ -19,5 +34,4 @@
                         </div>
                 </div>
         </button>
-</div>
-        <!-- <router-outlet></router-outlet> -->
+</div> -->
