--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,4 @@
-<!-- 
-<div *ngIf="disp">
-    <lifecycle></lifecycle>
-</div>
-
-<button type="button" (click)="abc()">ADD/REMOVE</button> -->
-<div *ngIf="lc.checkLogin">
+<div *ngIf="lc.loginCheck">
 <h1>Welcome to Home Page</h1>
 <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in rutrum ante, vitae porta tellus. Nullam et urna eget tellus sodales bibendum vitae eget metus. Phasellus nec enim accumsan, viverra enim quis, condimentum augue. Maecenas tellus mi, egestas id pellentesque sit amet, fringilla ut nisl. Cras ac cursus nisi. Ut dolor urna, aliquam eget ipsum a, cursus porttitor sapien. Nam orci sem, mattis eu eros non, tempus eleifend sem. Fusce auctor orci non leo viverra fermentum. Duis at tincidunt erat. Cras massa turpis, ultricies eget ullamcorper eget, pellentesque ac dui. Proin vitae ultrices dolor. Maecenas eget arcu eget ipsum ullamcorper faucibus. Fusce iaculis orci eu facilisis imperdiet. Sed semper eros ut sem ultrices, ut efficitur justo dignissim. Vivamus ullamcorper tempor mi, at aliquam eros.
