--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -5,10 +5,8 @@
           <li><a routerLink="home">HOME</a></li>
           <li><a routerLink="about">ABOUT US</a></li>
           <li><a routerLink="services">SERVICES</a></li>
-          <!-- <li><a routerLink="login">Login</a></li>
-          <li><a routerLink="register">Register</a></li> -->
           <li><a routerLink="contact">CONTACT US</a></li>
-          <li><a routerLink="logout">LOGOUT</a></li>
+          <li><button type="button" (click)="logout()">LOGOUT</button></li>
       </ul>
   </div>
 </div>
