--- a/src/app/home/services/account/account.component.html
+++ b/src/app/home/services/account/account.component.html
@@ -1,3 +1,49 @@
-<p>
-  account works!
-</p>
+<div *ngIf="lc.loginCheck; else loggedOut">
+<h1>Account Details</h1>
+<hr>
+
+<fieldset>
+    <legend>Account Details</legend>
+    <form class ="container" [formGroup]="form3" (ngSubmit)="clickUpdate(form3.value)">
+        <div class="loginBlock">
+                  <label for="fname">First Name </label><input type="text" name="fname" [(ngModel)] = "account.firstName" formControlName="fname"> <br>
+        
+                  <label for="lname">Last Name </label><input type="text" name="lname" [(ngModel)] = "account.lastName" formControlName="lname"> <br>
+        
+                  <label for="dob">Date of Birth </label><input type="date" name="dob" [(ngModel)] = "account.dob" formControlName="dob" [attr.disabled]="true"> <br>
+        
+                  <label for="number">Mobile Number</label><input type="number" name="number" [(ngModel)] = "account.number" formControlName="number" [attr.disabled]="true"> <br>
+        
+                  <label for="email">Email </label><input type="email" name="email" [(ngModel)] = "account.email" formControlName="email" [attr.disabled]="true"> <br>
+                  
+                  <label for="address">Address </label><input type="text" name="address" [(ngModel)] = "account.address" formControlName="address"> <br>
+                  
+                  <label for="pwd">Password </label><input type="password" name="pwd" placeholder="Enter Password" formControlName="pwd"> <br>
+                  
+                  <label for="Cpwd">Confirm Password</label><input type="password" name="Cpwd" placeholder="Confirm Password" formControlName="Cpwd"> <br>
+        
+                  <input type="submit" value="Update" [disabled]="!form3.valid">
+                  
+                  <input type="button" value="Cancel" (click)="backToServices()">
+                  
+                
+          </div>
+      </form>	
+  </fieldset>
+
+<!-- {{account.id}}<br>
+{{account.firstName}}<br>
+{{account.lastName}}<br> 
+{{account.dob}}<br> 
+{{account.number}}<br> 
+{{account.email}}<br> 
+{{account.address}}<br>  -->
+
+
+
+
+</div>
+
+<ng-template #loggedOut>
+        <logout></logout>
+    </ng-template>
