--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -9,3 +9,10 @@ input[type="submit"]:disabled
 {
     background-color: red;
 }
+div .error-block
+{
+    display: inline;
+    font-size: 12px;
+    color: red;
+
+}
