--- a/src/app/home/services/services.component.html
+++ b/src/app/home/services/services.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="lc.loginCheck; else loggedOut">
 <h2>Services Provided....</h2>
         <hr>
         <a routerLink="account">
@@ -34,3 +35,8 @@
                         </div>
                 </div>
         </a>
+</div>
+
+<ng-template #loggedOut>
+        <logout></logout>
+    </ng-template>
