database data added

--- a/src/app/home/contact/contact.component.css
+++ b/src/app/home/contact/contact.component.css
@@ -42,3 +42,16 @@ input[type=submit]:hover {
   height: auto;
   border: 1px solid #4CAF50;
 }
+
+
+input[type="submit"]:disabled
+{
+    background-color: red;
+}
+div .error-block
+{
+    display: inline;
+    font-size: 12px;
+    color: red;
+
+}
